# b-mercator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
include/: embeddingSD.hpp  embeddingSD_unix.hpp  generatingBipartiteSD.hpp  generatingBipartiteSD_unix.hpp  generatingSDbipartiteSD.hpp  generatingSDbipartiteSD_unix.hpp
lib/: Clustering_Coefficient_B.c  compute_bipartite_clustering.cpp  compute_weighted_bipartite_clustering.cpp  greedy_routing_bipartite_parallel.cpp
notebooks/: check_inferred_embeddings.py  check_inferred_embeddings_S3.py  convert-feature-matrix-to-edgelist.ipynb  paper-SI-bipartite-validation-synthetic-networks.ipynb  paper-SI-compare-coordinates-align-filter-by-degree.ipynb  paper-SI-compare-coordinates-align.ipynb  paper-SI-time-complexity.ipynb  paper-SI-true-vs-inferred-beta-b.ipynb  paper-bipartite-greedy-routing-synthetic-networks-dimension.ipynb  paper-citeseer-embedding-validation-f-mercator-full.ipynb  paper-cora-embedding-validation-f-mercator-full.ipynb  paper-cornell-embedding-validation-f-mercator-full.ipynb  paper-dblp-embedding-validation-f-mercator-full.ipynb  paper-flavor-network-bipartite-embedding.ipynb  paper-full-unicodelang-network-bipartite-embedding.ipynb  paper-greedy-routing-scheme.ipynb  paper-human-metabolic-network-bipartite-embedding.ipynb  paper-imdb-embedding-validation-f-mercator-full.ipynb  paper-node-classification-compare-all-models.ipynb  paper-process-full-unicodelang-dataset.ipynb  paper-texas-embedding-validation-f-mercator-full.ipynb  paper-wisconsin-embedding-validation-f-mercator-full.ipynb  validation_functions.py  weighted-bipartite-clustering-vs-beta-for-dimensions.ipynb  weighted-bipartite-clustering-vs-dimension.ipynb
scripts/: loader_utils.py  node_classification_all_models.py
src/: generatingBipartiteSD_unix.cpp  generatingSDBipartiteSD_unix.cpp
test/: bipartite_paper_ex_greedy_routing.yaml  bipartite_paper_validation_beta_b.yaml  bipartite_paper_validation_beta_b_v2.yaml  bipartite_paper_validation_check_coordinates.yaml  bipartite_paper_validation_time_complexity.yaml  bipartite_paper_validation_topological_properties.yaml  generate_bipartiteSD_networks.py
